--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,10 @@
     <title>Employees</title>
 </head>
 <body>
-    <h1> This site is reloading each 5 sec</h1>
+    <div class="header">
+        Header
+    </div>  
+    
 </body>
 </html>
 
